Ajustando comportamento disfuncional do ícone de localização da seção .footer_localization. A margem lateral desse ícone estava reduzinho seu tamanho à medida que a tela aumentava para larguras superiores a 1920px. Dessa forma, substitui margin-right no ícone por gap em seu contêiner pai, o que resolver a problemática.

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -11,11 +11,12 @@
 
 
 
- 
+
 /* ==================================================
 Styles for mobile devices with width equal to or less than 830px
 ================================================== */
 @media (max-width: 830px) and (orientation: portrait) {
+
     /* Header */
     .header {
         padding: 8.1% 4.7% 3.8%;
@@ -92,8 +93,8 @@ Styles for mobile devices with width equal to or less than 830px
 
             -webkit-box-orient: vertical;
             -webkit-box-direction: reverse;
-                -ms-flex-direction: column-reverse;
-                    flex-direction: column-reverse;
+            -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
 
             & .main__feature-content {
                 margin: 0;
@@ -153,8 +154,8 @@ Styles for mobile devices with width equal to or less than 830px
         & .footer__section {
             -webkit-box-orient: vertical;
             -webkit-box-direction: normal;
-                -ms-flex-direction: column;
-                    flex-direction: column;
+            -ms-flex-direction: column;
+            flex-direction: column;
 
             & .footer__contact-information {
                 margin: 0 0 16% 0;
@@ -164,6 +165,8 @@ Styles for mobile devices with width equal to or less than 830px
                 }
 
                 & .footer__localization {
+                    gap: 0rem;
+
                     & .footer__text {
                         max-width: 80%;
 
@@ -205,8 +208,8 @@ Styles for mobile devices with width equal to or less than 830px
 
                     -webkit-box-orient: vertical;
                     -webkit-box-direction: normal;
-                        -ms-flex-direction: column;
-                            flex-direction: column;
+                    -ms-flex-direction: column;
+                    flex-direction: column;
 
 
                     & .footer__nav-item {
@@ -214,32 +217,32 @@ Styles for mobile devices with width equal to or less than 830px
 
                         &:nth-child(2) {
                             -webkit-box-ordinal-group: 5;
-                                -ms-flex-order: 4;
-                                    order: 4;
+                            -ms-flex-order: 4;
+                            order: 4;
                         }
 
                         &:nth-child(3) {
                             -webkit-box-ordinal-group: 3;
-                                -ms-flex-order: 2;
-                                    order: 2;
+                            -ms-flex-order: 2;
+                            order: 2;
                         }
 
                         &:nth-child(4) {
                             -webkit-box-ordinal-group: 6;
-                                -ms-flex-order: 5;
-                                    order: 5;
+                            -ms-flex-order: 5;
+                            order: 5;
                         }
 
                         &:nth-child(5) {
                             -webkit-box-ordinal-group: 4;
-                                -ms-flex-order: 3;
-                                    order: 3;
+                            -ms-flex-order: 3;
+                            order: 3;
                         }
 
                         &:nth-child(6) {
                             -webkit-box-ordinal-group: 7;
-                                -ms-flex-order: 6;
-                                    order: 6;
+                            -ms-flex-order: 6;
+                            order: 6;
                         }
 
                         & .footer__nav-link {
@@ -256,8 +259,8 @@ Styles for mobile devices with width equal to or less than 830px
 
             & .footer__social-list {
                 -webkit-box-pack: center;
-                    -ms-flex-pack: center;
-                        justify-content: center;
+                -ms-flex-pack: center;
+                justify-content: center;
 
                 & .footer__social-item:nth-child(n+2) {
                     margin-left: 3.5%;
@@ -265,7 +268,7 @@ Styles for mobile devices with width equal to or less than 830px
 
                 & .footer__social-icon {
                     width: max(7.5vw, 2.6rem);
-                    
+
                     font-size: max(3.7vw, 1.2rem);
                 }
             }
@@ -279,7 +282,7 @@ Styles for mobile devices with width equal to or less than 830px
 
         & .footer__author-credits {
             bottom: max(2.2vw, 0.8rem);
-            
+
             width: 90%;
 
             text-align: center;
@@ -311,8 +314,8 @@ Styles for mobile devices with width equal to or less than 830px
     .header {
         & .header__content {
             -webkit-box-align: center;
-                -ms-flex-align: center;
-                    align-items: center;
+            -ms-flex-align: center;
+            align-items: center;
 
             & .header__content-text-container {
                 padding: 1.6% 0 0;
@@ -324,7 +327,7 @@ Styles for mobile devices with width equal to or less than 830px
 
             & .header__content-image-container {
                 -ms-flex-preferred-size: min(130vw, 83.3rem);
-                    flex-basis: min(130vw, 83.3rem);
+                flex-basis: min(130vw, 83.3rem);
 
                 & .header__image {
                     width: 100%;
@@ -344,4 +347,3 @@ Styles for mobile devices with width equal to or less than 830px
         font-size: 300%;
     }
 }
-
