--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,9 +51,7 @@ html {
     background-size: contain;
 
     display: -webkit-box;
-
     display: -ms-flexbox;
-
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -278,6 +276,7 @@ html {
                 -webkit-box-align: start;
                     -ms-flex-align: start;
                         align-items: flex-start;
+                        gap: min(1.5vw, 3rem);
 
                 & .footer__text {
                     max-width: min(25vw, 45rem);
@@ -288,7 +287,6 @@ html {
                 & .footer__icon {
                     width: min(0.8vw, 1.3rem);
 
-                    margin-right: 5.5%;
                 }
             }
 
@@ -357,8 +355,6 @@ html {
                         width: 100%;
                     }
                 }
-
-
             }
         }
     }
